--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td> <img src="E:\School Stuff\Practice Sites\HTML Personal Site\me-modified.png"> </td>
+            <td> <img src="me-modified.png"> </td>
             <td> <h1><a href="https://www.facebook.com/joseph.trinkle/"> Joseph Trinkle</a></h1>
                 <p><em>Bachelor of Arts in Broadcast Media, musician, and professional pasta slinger.</em></p>
              
