--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
         </tr>
     </table>
 <hr size="3">
-    <a href="Contacts.html"><strong>Contact me</strong></a>
+    <a href="contacts.html"><strong>Contact me</strong></a>
 </body>
 </html>
