--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
             
     </form>
 </body>
-</html>"><strong>Contact me</strong></a>
+<a href="Contacts.html">Contact me</a>
 </body>
 </html>
