--- a/index.html
+++ b/index.html
@@ -61,29 +61,4 @@
         </tr>
     </table>
 <hr size="3">
-    <a href="<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Contact</title>
-</head>
-<body>
-    <h3>Contact me:</h3>
-    <p>2700 E McKinney St. Apt 1206</p>
-    <p>940-594-6285</p>
-    <p>jtrinkle812@gmail.com</p>
-<hr size="3">
-    <form action="mailto:info@jtrinkle12@gmail.com" method="post" enctype="text/plain">
-        <label>Your Name:</label>
-            <input type="text"><br>
-            <label>Your Email:</label>
-            <input type="email"><br>
-            <label>Your Message:</label><br>
-        <textarea rows="10" cols="30"></textarea><br> 
-            <input type="submit">
-            
-    </form>
-</body>
-<a href="Contacts.html">Contact me</a>
-</body>
-</html>
+<a href="Contacts.html>Contact Me</a>
