--- a/index.html
+++ b/index.html
@@ -61,4 +61,4 @@
         </tr>
     </table>
 <hr size="3">
-<a href="Contacts.html">Contact Me</a>
+<a href="Contacts.html"><strong>Contact Me</strong></a>
